# minimal-vim-cpp

./: .clang-format  .vimrc  CMakeLists.txt  Session.vim  absolut_path_preview.sh  ctags_with_dep.sh  drink_factory.hpp  fp.cpp  hot_drink.hpp  interface_segregation.cpp  main.cpp  output.txt
fp/: afp.cpp  hot_drink_factory.hpp
isp/: interface_segregation.cpp
ocp/: open_close.cpp
pp/: CMakeLists.txt
pp/src/pp/: prototype.cpp
srp/: CMakeLists.txt
srp/src/srp/: main.cpp
